# mcp-pdf

./: Cargo.toml  PROPOSAL-V3.md  README.md  SPEC.md  mcp-server.toml
src/: lib.rs  main.rs  server.rs
src/tools/: convert.rs  extract.rs  forms.rs  generate.rs  inspect.rs  manipulate.rs  mod.rs  numbering.rs  security.rs
