[package]
name = "mcp-pdf"
version = "1.0.0"
edition = "2024"
authors = ["James Karanja <james.karanja@zavora.ai>"]
description = "PDF MCP Server — extract text, tables, forms, OCR, generate, merge, split, encrypt, and sign PDFs for AI agents"
license = "Apache-2.0"
repository = "https://github.com/zavora-ai/mcp-pdf"
homepage = "https://enterprise.adk-rust.com"
keywords = ["mcp", "pdf", "extract", "forms", "generate"]
categories = ["development-tools"]
readme = "README.md"

[dependencies]
adk-mcp-sdk = "0.1"
rmcp = { version = "1.7", features = ["server", "transport-io", "macros"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
anyhow = "1"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
schemars = "1"
lopdf = "0.40"
pdf-extract = "0.10"
printpdf = "0.7"
base64 = "0.22"
chrono = "0.4"

[workspace]
