[package]
name = "mcp-pdf"
version = "3.0.0"
edition = "2021"
description = "The PDF Operating Layer for AI Agents — 131 tools, 88 templates, 10 verticals"
license = "Apache-2.0"
repository = "https://github.com/zavora-ai/mcp-pdf"

[dependencies]
rmcp = { version = "1.7", features = ["server", "transport-io", "macros"] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
lopdf = "0.40"
printpdf = { version = "0.7", features = ["embedded_images"] }
image_crate = { package = "image", version = "0.24" }
pdf-extract = "0.10"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
regex = "1"
anyhow = "1"
aes = "0.8"
cbc = "0.1"
md5 = "0.8"
rand = "0.9"

[workspace]
