[package]
name = "mcp-pdf"
version = "3.0.1"
edition = "2021"
description = "The PDF Operating Layer for AI Agents — 57 tools for inspect, extract, generate, convert, manipulate, secure, and fill PDFs"
license = "Apache-2.0"
repository = "https://github.com/zavora-ai/mcp-pdf"
keywords = ["mcp", "pdf", "ai", "document", "enterprise"]
categories = ["command-line-utilities", "text-processing"]
readme = "README.md"

[dependencies]
rmcp = { version = "1.7", features = ["server", "transport-io", "macros"] }
schemars = "1"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tokio = { version = "1", features = ["full"] }
lopdf = "0.40"
printpdf = { version = "0.7", features = ["embedded_images"] }
image_crate = { package = "image", version = "0.24" }
pdf_oxide = "0.3"
pdf-extract = "0.10"
chrono = { version = "0.4", features = ["serde"] }
sha2 = "0.10"
regex = "1"
anyhow = "1"
aes = "0.8"
cbc = "0.1"
md5 = "0.8"
rand = "0.9"
qrcode = "0.14"
comrak = "0.52"

[workspace]
